# fandango

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: coverage.yml  rust.yml  security-audit.yml
docs/prompts/: 0-create.md  0-response.txt
src/: client.rs  error.rs  lib.rs  rest.rs  rpc.rs
tests/: integration_tests.rs
