[package]
name = "fandango"
version = "0.1.0"
edition = "2021"
authors = ["Daniel"]
license = "MIT"
description = "Async Rust library for Bitcoin SV node communication"
repository = "https://github.com/yourusername/fandango"
keywords = ["bitcoin", "bsv", "bitcoinsv", "blockchain", "rpc"]
categories = ["api-bindings", "asynchronous", "cryptocurrency"]

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Bitcoin SV types and utilities
bitcoinsv = "0.3"

# HTTP client for REST and JSON-RPC
reqwest = { version = "0.11", features = ["json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"

# Encoding/decoding
hex = "0.4"
base64 = "0.21"

[dev-dependencies]
# Testing utilities
tokio-test = "0.4"
mockito = "1.2"
wiremock = "0.5"

# Environment variables for integration tests
dotenvy = "0.15"

# Async utilities for tests
futures = "0.3"

[lib]
name = "fandango"
path = "src/lib.rs"

[[test]]
name = "integration"
path = "tests/integration_tests.rs"
