[package]
name = "bitcoinsv-rpc"
version = "2.0.0"
edition = "2021"
authors = ["Daniel"]
license = "MIT"
description = "Async Rust library for Bitcoin SV node communication"
repository = "https://github.com/Danconnolly/rust-bitcoinsv-rpc"
keywords = ["bitcoin", "bsv", "bitcoinsv", "blockchain", "rpc"]
categories = ["api-bindings", "asynchronous"]

[dependencies]
# Async runtime
tokio = { version = "1.47", features = ["full"] }

# Async trait support
async-trait = "0.1"

# Bitcoin SV types and utilities
bitcoinsv = "0.4"

# HTTP client for REST and JSON-RPC
reqwest = { version = "0.12", features = ["json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2.0"

# Encoding/decoding
hex = "0.4"

[dev-dependencies]
# Testing utilities
tokio-test = "0.4"
mockito = "1.7"
wiremock = "0.6"

# Environment variables for integration tests
dotenvy = "0.15"

# Async utilities for tests
futures = "0.3"

[lib]
name = "bitcoinsv_rpc"
path = "src/lib.rs"

[[test]]
name = "integration"
path = "tests/integration_tests.rs"
